--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi totam reiciendis, quas voluptatem exercitationem ducimus consequatur, tenetur saepe maiores distinctio dolor, fugit iusto rerum provident eos cum maxime animi hic.</p>
                 <form>
-                    
+
                     <input type="text" placeholder="Nome">
                     <input type="email" placeholder="Email">
-                    <input type="submit" placeholder="Nome">
-
+                    <input type="submit" value ="Enviar >">
 
                 </form>
-
             </aside>
+            <article>
+                
+            </article>
         </main>
 </body>
 
