--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marketing Creativo</title>
+    <link rel="stylesheet" href="styles/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/fonts.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -39,7 +42,7 @@
                 </form>
             </aside>
             <article>
-                
+                <img src="./components/images/77d0a7c454e658833800528e748edbe9.png" alt="woman-purple">
             </article>
         </main>
 </body>
