update Marketing creative

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                 <li><a href="#">Serviços</a></li>
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Contato</a></li>
-                <li><a href="#">Ja tem uma conta?</a></li>
+                <li><a href="#" id="inscreva-se-btn">Ja tem uma conta?</a></li>
 
             </ul>
         </header>
 
         <main>
             <aside>
-                <h2>Increva-se agora</h2>
+                <h2><span>Increva-se agora</span></h2>
                 <h2>na Newslater</h2>
 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi totam reiciendis, quas voluptatem exercitationem ducimus consequatur, tenetur saepe maiores distinctio dolor, fugit iusto rerum provident eos cum maxime animi hic.</p>
