--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <form>
 
                     <input type="text" placeholder="Nome">
-                    <input type="email" placeholder="Email">
+                    <input type="email" placeholder="E-mail">
                     <input type="submit" value ="Enviar >">
 
                 </form>
