--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Marketing Creativo</title>
     <link rel="stylesheet" href="styles/style.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/fonts.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/media.css" rel="stylesheet">
+    
 
 </head>
 
